--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body, html {
     background-image: url('assets/background2.png');
     background-size: cover;
     background-position: center;
+	background-color: #000; /* Match this to the color of your background image */
     width: 100%;
     height: 100%;
     display: flex;
