--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
     background-image: url('assets/background2.png');
     background-size: cover;
     background-position: center;
-	background-color: #000; /* Match this to the color of your background image */
+    background-color: #000; /* Match this to the color of your background image */
     width: 100%;
     height: 100%;
     display: flex;
@@ -55,58 +55,16 @@ body, html {
     color: #ea4343; /* Change this to the desired color */
     font-weight: bold; /* Make the text bold */
     text-decoration: none; /* Remove underline from link */
-	font-family: Arial, sans-serif;
     text-shadow: -1px -1px 0 #000,  
-                  1px -1px 0 #000,
-                 -1px  1px 0 #000,
-                  1px  1px 0 #000; /* Adds black outline */
+                1px -1px 0 #000,
+                -1px  1px 0 #000,
+                1px  1px 0 #000; /* Adds black outline */
 }
 
-.subpage-text {
-	color: red;
-	text-align: justify;
-	font-size: 25px;
-	font-weight: bold;
-	margin-left: 650px;
-	margin-right: 650px;
-	margin-bottom: 20px;
-}
-
-.navbar {
-    background-color: #ea4343;
-    overflow: hidden;
-    padding-right: 20px; /* Add some padding to the right */
-}
-
-.nav-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center; /* Change from center to flex-end */
-}
-
-.nav-list li {
-    margin-left: 20px; /* Add some space between the list items */
-}
-
-.nav-list li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-}
-
-.nav-list li a:hover {
-    background-color: #b70e0e;
-}
-
-/* Improve typography and text styling */
 .subpage-text {
     color: #fff; /* White text for contrast against the background */
     text-align: left; /* Align text to the left for a more traditional layout */
-    font-size: 20px; /* Slightly smaller for readability */
+    font-size: 20px; /* Comfortable font size for readability */
     font-weight: 400; /* Regular weight for body text */
     line-height: 1.6; /* Better line spacing for readability */
     margin-left: auto; /* Center content within the page */
@@ -139,4 +97,48 @@ body, html {
     text-align: center; /* Center the introductory paragraph for emphasis */
 }
 
+.navbar {
+    background-color: #ea4343;
+    overflow: hidden;
+}
 
+.nav-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-list li {
+    float: left;
+}
+
+.nav-list li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+.nav-list li a:hover {
+    background-color: #b70e0e;
+}
+
+/* Instagram Gallery Styling */
+.instagram-gallery {
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.instagram-gallery iframe {
+    border: none;
+    border-radius: 10px; /* Rounded corners */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Add a subtle shadow for depth */
+    width: 300px; /* Set iframe width */
+    height: 400px; /* Set iframe height */
+}
