--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,9 @@ body, html {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; /* Align content to the start */
+    justify-content: center;
     align-items: center;
     position: relative;
-    padding-top: 70px; /* Adjust for navbar height */
 }
 
 .logo-container {
@@ -101,10 +100,6 @@ body, html {
 .navbar {
     background-color: #ea4343;
     overflow: hidden;
-    position: fixed; /* Fixes the navbar at the top */
-    width: 100%; /* Ensure it spans the entire width */
-    top: 0; /* Stick to the top */
-    z-index: 1000; /* Ensures it stays above other content */
 }
 
 .nav-list {
