--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 .background {
-    background-image: url('assets/background2.png');
+    background-image: url('assets/background.png');
     background-size: cover;
     background-position: center;
     background-color: #000;
